# praktikum_mikrocontroller

./: .gitignore  CMakeLists.txt  README.md  praktikum_mikrocontroller.ioc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
Core/Inc/: FXAS21002.h  FXAS21002.hpp  FXOS8700.h  FXOS8700.hpp  SensorManager.h  SensorManager.hpp  State.h  State.hpp  StateManager.h  StateManager.hpp  main.h  stm32f0xx_it.h
Core/Src/: FXAS21002.cpp  FXOS8700.cpp  SensorManager.cpp  StateCookie.cpp  StateCuddles.cpp  StateIdle.cpp  StateManager.cpp  StateNausea.cpp  StateSleep.cpp  main.c  stm32f0xx_it.c
Core/SystemFiles/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Core/SystemFiles/Src/: main.c  main.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_it.cpp  syscalls.c  system_stm32f0xx.c
Core/SystemFiles/Startup/: startup_stm32f051r8tx.s
